{{$NEXT}}
- Add newline to warning emitted when a signal is caught

0.16 2017-03-09
- Fixed bug allowing pause flag to have precedence over stop flag
- Emit a warning when a posix signal is received

0.15 2017-03-08
- Fixed bug allowing a guard object to be held inappropriately
- Fixed bug causing pid files to be overwritten/unlinked by forked child processes

0.14 2017-03-08
- Update to Auto::Mata 0.07
- Proc::tored::Machine is now a Moo class
- Proc::tored::PidFile is now a Moo class
- Refactored and tightened state machine workflow

0.13 2017-03-06
- Use Auto::Mata to track service state

0.12 2017-03-02
- On service shutdown, truncate pid file before removing in case there are open
  handles in other processes

0.11 2017-02-23
- Fixed bug in definition of SignalList type
- Fixed test failures on MSWin32
- Added test for Proc::tored::Types

0.10 2017-02-22
- Remove pidfile after service completes
- Configurable signal trapping

0.09 2017-02-21
- Added Proc::tored::Manager->stop_file and ->pause_file to override touch file
  paths

0.08 2017-02-20
- Service state is now persistent
- New feature: pause/resume

0.07 2017-02-18
- Fixed serious bug causing pid file to be removed when a forked process exits

0.06 2017-02-17
- Use a touch file to signal self-termination

0.05 2017-02-17
- Refactor locking to support more platforms
- Work around for MSWin32/threaded signal handling in unit tests

0.04 2017-02-16
- Use Path::Tiny->tempdir for pidfile directory in tests
- Fixed untrapped error when lockfile creation fails

0.03 2017-02-15
- Replace poll_wait_time attribute with parameter to
  Proc::tored::Role::Running->stop_running_process
- Use secondary lock file to avoid inconsistent flocking on mswin32

0.02 2017-02-14
- New interface
- Trap normal signals (TERM, INT, HUP, PIPE)
- Rewrote cleanup code to handle unexpected errors more reliably
- Fixed some inconsistent results in unit tests (hopefully)

0.01 2017-02-13
- First version